Fix spacing on download buttons

--- a/src/scss/eeps.scss
+++ b/src/scss/eeps.scss
@@ -2,3 +2,9 @@
 #demonstrations-header {
   margin-bottom: 15px;
 }
+
+// Download buttons
+div.download h3 a.btn.btn-success {
+    margin-bottom: 1%;
+}
+
